# cosmostatmap

./: .buildinfo  .coveragerc  .gitignore  .travis.yml  README.rst  cosmostatmap.html  cosmostatmap.info.html  cosmostatmap.map.html  environment.yml  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: cosmostatmap.doctree  cosmostatmap.info.doctree  cosmostatmap.map.doctree  index.doctree  modules.doctree
.github/workflows/: ci.yml  deploy.yml
_sources/: cosmostatmap.rst.txt  modules.rst.txt
cosmostatmap/: __init__.py  map.py
data/: countries.yml
docs/source/: conf.py  cosmostatmap.info.rst  cosmostatmap.map.rst  index.rst
lib/cosmostatmap/: __init__.py  info.py
notebooks/: Display Map.ipynb
notebooks/.ipynb_checkpoints/: Display Map-checkpoint.ipynb
scripts/: generate_map.py
scripts-3.10/: generate_map.py
src/cosmostatmap/: map.py
